@@ -1,0 +1,24 @@
+language: perl
+notifications:
+  slack:
+    rooms:
+      - cpanelllc:V6BAp4TZMPzu6ieWNznycYKK#busy-camels
+env:
+  global:
+    - PERL_USE_UNSAFE_INC=0
+    - AUTHOR_TESTING=1
+    - AUTOMATED_TESTING=1
+    - RELEASE_TESTING=1
+perl:
+  - "5.28"
+  - "5.14"
+  - "5.26"
+  - "5.24"
+  - "5.22"
+  - "5.20"
+  - "5.18"
+  - "5.16"
+  - "5.12"
+  - "5.10"
+script:
+  - perl Makefile.PL && make test
